[package]
name = "quantum_hsm"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-ntru = "0.5.8"
pqcrypto-traits = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.0"
secrecy = "0.10.3"
hex = "0.4.3"
bitcoin = "0.32.5"
solana-sdk = "2.2.1"
ethers = "2.0.14"
lazy_static = "1.5.0"
