[package]
name = "quantum_hsm"
version = "0.1.0"
edition = "2021"

[dependencies]
pqcrypto-dilithium = "0.5.0"
pqcrypto-traits = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
axum = "0.8.0"
secrecy = "0.8.0"
hex = "0.4.3"
lazy_static = "1.5.0"
parking_lot = "0.12"
